[gd_scene load_steps=128 format=2]

[ext_resource path="res://demos/bomber/Player/player.gd" type="Script" id=1]
[ext_resource path="res://addons/PWK/nodes/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://demos/bomber/Player/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://demos/bomber/Player/States/Run.gd" type="Script" id=4]
[ext_resource path="res://demos/bomber/Player/States/Slide.gd" type="Script" id=5]
[ext_resource path="res://demos/bomber/Player/States/Air.gd" type="Script" id=6]
[ext_resource path="res://demos/bomber/Player/States/Dance.gd" type="Script" id=7]
[ext_resource path="res://demos/bomber/Player/States/KO.gd" type="Script" id=8]
[ext_resource path="res://demos/bomber/Player/Punch.tscn" type="PackedScene" id=9]
[ext_resource path="res://demos/bomber/Player/States/Stunned.gd" type="Script" id=10]
[ext_resource path="res://demos/bomber/Manager/ruler_manager.tres" type="Resource" id=11]
[ext_resource path="res://demos/bomber/Player/States/Throw.gd" type="Script" id=12]
[ext_resource path="res://demos/bomber/Bomb/Bomb.tscn" type="PackedScene" id=13]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0000.png" type="Texture" id=14]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/1.png" type="Texture" id=15]
[ext_resource path="res://demos/bomber/Player/sprites/air/fill/air-fill-0002.png" type="Texture" id=16]
[ext_resource path="res://demos/bomber/Player/sprites/air/fill/air-fill-0000.png" type="Texture" id=17]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0008.png" type="Texture" id=18]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0014.png" type="Texture" id=19]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0012.png" type="Texture" id=20]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0002.png" type="Texture" id=21]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0000.png" type="Texture" id=22]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0010.png" type="Texture" id=23]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0006.png" type="Texture" id=24]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0004.png" type="Texture" id=25]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0000.png" type="Texture" id=26]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0002.png" type="Texture" id=27]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0006.png" type="Texture" id=28]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0004.png" type="Texture" id=29]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0014.png" type="Texture" id=30]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0012.png" type="Texture" id=31]
[ext_resource path="res://demos/bomber/Player/sprites/punch/fill/punch-fill-0006.png" type="Texture" id=32]
[ext_resource path="res://demos/bomber/Player/sprites/punch/stroke/punch-stroke-0000.png" type="Texture" id=33]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0016.png" type="Texture" id=34]
[ext_resource path="res://demos/bomber/Player/sprites/air/fill/air-fill-0001.png" type="Texture" id=35]
[ext_resource path="res://demos/bomber/Player/sprites/air/fill/air-fill-0004.png" type="Texture" id=36]
[ext_resource path="res://demos/bomber/Player/behavioranimation.gd" type="Script" id=37]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0004.png" type="Texture" id=38]
[ext_resource path="res://demos/bomber/Player/sprites/air/stroke/air-stroke-0000.png" type="Texture" id=39]
[ext_resource path="res://demos/bomber/Player/sprites/air/stroke/air-stroke-0003.png" type="Texture" id=40]
[ext_resource path="res://demos/bomber/Player/player_material.tres" type="Material" id=41]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0008.png" type="Texture" id=42]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/2.png" type="Texture" id=43]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/3.png" type="Texture" id=44]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/5.png" type="Texture" id=45]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/6.png" type="Texture" id=46]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/7.png" type="Texture" id=47]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/4.png" type="Texture" id=48]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/9.png" type="Texture" id=49]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/8.png" type="Texture" id=50]
[ext_resource path="res://demos/bomber/Player/sprites/idle/fill/10.png" type="Texture" id=51]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0028.png" type="Texture" id=52]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0020.png" type="Texture" id=53]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0012.png" type="Texture" id=54]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0016.png" type="Texture" id=55]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0036.png" type="Texture" id=56]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0032.png" type="Texture" id=57]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0024.png" type="Texture" id=58]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0004.png" type="Texture" id=59]
[ext_resource path="res://demos/bomber/Player/sprites/idle/stroke/stroke-0008.png" type="Texture" id=60]
[ext_resource path="res://demos/bomber/Player/sprites/run/stroke/0008.png" type="Texture" id=61]
[ext_resource path="res://demos/bomber/Player/sprites/run/fill/0010.png" type="Texture" id=62]
[ext_resource path="res://demos/bomber/Player/sprites/air/stroke/air-stroke-0001.png" type="Texture" id=63]
[ext_resource path="res://demos/bomber/Player/sprites/air/stroke/air-stroke-0002.png" type="Texture" id=64]
[ext_resource path="res://demos/bomber/Player/sprites/air/stroke/air-stroke-0004.png" type="Texture" id=65]
[ext_resource path="res://demos/bomber/Player/sprites/air/fill/air-fill-0003.png" type="Texture" id=66]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0018.png" type="Texture" id=67]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0014.png" type="Texture" id=68]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0002.png" type="Texture" id=69]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0010.png" type="Texture" id=70]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0012.png" type="Texture" id=71]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0000.png" type="Texture" id=72]
[ext_resource path="res://demos/bomber/Player/sprites/slide/stroke/slide-stroke-0006.png" type="Texture" id=73]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0010.png" type="Texture" id=74]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0000.png" type="Texture" id=75]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0018.png" type="Texture" id=76]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0008.png" type="Texture" id=77]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0016.png" type="Texture" id=78]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0004.png" type="Texture" id=79]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0002.png" type="Texture" id=80]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0006.png" type="Texture" id=81]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0012.png" type="Texture" id=82]
[ext_resource path="res://demos/bomber/Player/sprites/slide/fill/slide-fill-0014.png" type="Texture" id=83]
[ext_resource path="res://demos/bomber/Player/sprites/punch/fill/punch-fill-0002.png" type="Texture" id=84]
[ext_resource path="res://demos/bomber/Player/sprites/punch/fill/punch-fill-0004.png" type="Texture" id=85]
[ext_resource path="res://demos/bomber/Player/sprites/punch/stroke/punch-stroke-0006.png" type="Texture" id=86]
[ext_resource path="res://demos/bomber/Player/sprites/punch/fill/punch-fill-0000.png" type="Texture" id=87]
[ext_resource path="res://demos/bomber/Player/sprites/punch/stroke/punch-stroke-0004.png" type="Texture" id=88]
[ext_resource path="res://demos/bomber/Player/sprites/punch/stroke/punch-stroke-0002.png" type="Texture" id=89]
[ext_resource path="res://demos/bomber/sounds/sfx_manager.tres" type="Resource" id=90]

[sub_resource type="CapsuleShape2D" id=70]
radius = 29.0
height = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 36.1248

[sub_resource type="Animation" id=38]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 40 ), ExtResource( 65 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 66 ), ExtResource( 36 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 51 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 58 ), ExtResource( 52 ), ExtResource( 57 ), ExtResource( 56 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 39 ), ExtResource( 63 ), ExtResource( 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 35 ), ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "Punch"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 86 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 87 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 32 ) ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/Stroke")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/Fill")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Run"
length = 0.8
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 61 ), ExtResource( 23 ), ExtResource( 31 ), ExtResource( 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 62 ), ExtResource( 20 ), ExtResource( 19 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "Slide"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/fill_sampler")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 75 ), ExtResource( 80 ), ExtResource( 79 ), ExtResource( 81 ), ExtResource( 77 ), ExtResource( 74 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 78 ), ExtResource( 76 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/stroke_sampler")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 72 ), ExtResource( 69 ), ExtResource( 38 ), ExtResource( 73 ), ExtResource( 42 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 68 ), ExtResource( 34 ), ExtResource( 67 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Punch"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "Slide"

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachine" id=67]
states/Fall/node = SubResource( 44 )
states/Fall/position = Vector2( 511, 82 )
states/Idle/node = SubResource( 45 )
states/Idle/position = Vector2( 344, 217 )
states/Jump/node = SubResource( 46 )
states/Jump/position = Vector2( 344, 82 )
states/Run/node = SubResource( 47 )
states/Run/position = Vector2( 511, 217 )
states/Slide/node = SubResource( 48 )
states/Slide/position = Vector2( 124, 117 )
transitions = [ "Idle", "Run", SubResource( 49 ), "Run", "Idle", SubResource( 50 ), "Idle", "Jump", SubResource( 51 ), "Jump", "Idle", SubResource( 52 ), "Jump", "Run", SubResource( 53 ), "Jump", "Fall", SubResource( 54 ), "Fall", "Jump", SubResource( 55 ), "Fall", "Run", SubResource( 56 ), "Fall", "Idle", SubResource( 57 ), "Run", "Fall", SubResource( 58 ), "Idle", "Fall", SubResource( 59 ), "Run", "Jump", SubResource( 60 ), "Slide", "Idle", SubResource( 61 ), "Slide", "Run", SubResource( 62 ), "Jump", "Slide", SubResource( 63 ), "Fall", "Slide", SubResource( 64 ), "Slide", "Jump", SubResource( 65 ), "Slide", "Fall", SubResource( 66 ) ]
start_node = "Idle"
graph_offset = Vector2( -59, -54 )

[sub_resource type="AnimationNodeOneShot" id=69]
fadein_time = 0.0
fadeout_time = 0.0

[sub_resource type="AnimationNodeBlendTree" id=42]
graph_offset = Vector2( -431, -5 )
nodes/Animation/node = SubResource( 43 )
nodes/Animation/position = Vector2( -120, 180 )
nodes/action/node = SubResource( 67 )
nodes/action/position = Vector2( -120, 20 )
nodes/output/position = Vector2( 320, 100 )
nodes/punch/node = SubResource( 69 )
nodes/punch/position = Vector2( 100, 40 )
node_connections = [ "output", 0, "punch", "punch", 0, "action", "punch", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=68]

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )
punch_timer = NodePath("Punch_timer")
bomb_timer = NodePath("Bomb_timer")
RuleManager = ExtResource( 11 )
main_sfx_manager = ExtResource( 90 )
punch_scene = ExtResource( 9 )
bomb_scene = ExtResource( 13 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, 10 )
shape = SubResource( 70 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
stun_timer = NodePath("../../Stun_timer")

[node name="KO" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Dance" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Throw" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="Stun_timer" type="Timer" parent="."]
one_shot = true

[node name="Punch_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Bomb_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="ColorRect" parent="."]
material = ExtResource( 41 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 75, 75 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 38 )
anims/Idle = SubResource( 37 )
anims/Jump = SubResource( 39 )
anims/Punch = SubResource( 40 )
anims/RESET = SubResource( 32 )
anims/Run = SubResource( 10 )
anims/Slide = SubResource( 41 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 42 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/action/playback = SubResource( 68 )
parameters/punch/active = false
script = ExtResource( 37 )
sprite = NodePath("../Sprite")

[connection signal="changeDirection" from="." to="AnimationTree" method="_on_Player_changeDirection"]
[connection signal="punch" from="." to="AnimationTree" method="_on_Player_punch"]
[connection signal="transitioned" from="StateMachine" to="AnimationTree" method="_on_StateMachine_transitioned"]
[connection signal="fall" from="StateMachine/Air" to="AnimationTree" method="_on_Air_fall"]
[connection signal="jump" from="StateMachine/Air" to="AnimationTree" method="_on_Air_jump"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Punch_timer" to="." method="_on_Punch_timer_timeout"]
[connection signal="timeout" from="Bomb_timer" to="." method="_on_Bomb_timer_timeout"]
